infra/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
  namespace: projectmanagement
spec:
  replicas: 4
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
        - name: project-service
          image: ujjwalraghuvanshi1212/project-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:  # Minimum guaranteed resources
              memory: "256Mi"
              cpu: "100m"
            limits:  # Maximum allowed resources
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: project-service
  namespace: projectmanagement
spec:
  selector:
    app: project-service
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
