infra/app/project-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-service
  namespace: projectmanagement
spec:
  selector:
    app: project-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
